--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
     "typescript": "4.8.4",
     "vite": "3.2.1",
     "vite-tsconfig-paths": "3.5.0"
+  },
+  "dependencies": {
+    "@builder.io/sdk-qwik": "^0.0.34"
   }
 }
