--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "@types/node": "latest",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
+    "css-has-pseudo": "^4.0.1",
     "eslint": "8.26.0",
     "eslint-plugin-qwik": "0.12.1",
     "node-fetch": "3.2.10",
+    "postcss": "^8.4.18",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.2.1",
