--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "qwik": "qwik"
   },
   "devDependencies": {
-    "@builder.io/partytown": "^0.7.0",
+    "@builder.io/partytown": "^0.7.1",
     "@builder.io/qwik": "0.12.1",
     "@builder.io/qwik-city": "0.0.118",
     "@netlify/vite-plugin-netlify-edge": "1.1.0",
     "@types/eslint": "8.4.8",
-    "@types/node": "latest",
+    "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "5.41.0",
     "@typescript-eslint/parser": "5.41.0",
     "css-has-pseudo": "^4.0.1",
     "eslint": "8.26.0",
     "eslint-plugin-qwik": "0.12.1",
     "node-fetch": "3.2.10",
-    "postcss": "^8.4.18",
+    "postcss": "^8.4.19",
     "prettier": "2.7.1",
     "typescript": "4.8.4",
     "vite": "3.2.1",
@@ -42,10 +42,10 @@
   },
   "dependencies": {
     "@builder.io/sdk-qwik": "^0.0.34",
-    "open-props": "^1.4.16",
+    "open-props": "^1.4.25",
     "postcss-cli": "^10.0.0",
     "postcss-import": "^15.0.0",
     "postcss-nested": "^5.0.6",
-    "postcss-preset-env": "^7.8.2"
+    "postcss-preset-env": "^7.8.3"
   }
 }
